[package]
name = "fpid-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "fpid (find pid): fast process id lookup. Rust rewrite of the C version."
readme = "README.md"
repository = "https://github.com/Seyud/fpid-rs"
homepage = "https://github.com/Seyud/fpid-rs"
documentation = "https://github.com/Seyud/fpid-rs#readme"
keywords = ["pid", "process", "procfs", "cli", "linux"]
categories = ["command-line-utilities", "os::unix-apis"]

[dependencies]

[package.metadata.upstream]
name = "fpid"
repository = "https://gitee.com/sutoliu/fpid"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
